--- a/js_sandbox/index.html
+++ b/js_sandbox/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1>Practicing JavaScript Sandbox: Section 2</h1>
 
+  <h2>if you stumble upon this please ignore, thanks</h2>
+
   <script src="app.js"></script>
 </body>
 </html>
